--- a/todolist/src/App.css
+++ b/todolist/src/App.css
@@ -22,6 +22,12 @@
   box-shadow: 0px 0px 10px black;
   background-color: white;
  
+  display: flex;
+  flex-direction: column;
+
+  flex-wrap: row wrap ;
+  list-style: none;
+  overflow: auto;
   
   
   
@@ -71,5 +77,11 @@ h4{
   
 }
 
+
+.card{
+  background-color: #A459D1;
+  padding: 10px;
+  margin: 10px;
+}
 
 
