--- a/todolist/src/App.css
+++ b/todolist/src/App.css
@@ -3,14 +3,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #FFB84C;
+  background-color: rgb(199, 198, 198);
   height: 590px;
   
 }
 
 .Header{
   width: 100%;
-  background-color: #A459D1;
+  background-color: black;
   padding: .5px;
 }
 
@@ -44,8 +44,8 @@ h1{
   width: 100%;
   height: 30px;
   
-  margin: 10px;
-  
+  /* margin: 10px; */
+  padding-top: 10px;
   display: flex;
   flex-direction: row;
   
@@ -53,35 +53,58 @@ h1{
   
 }
 .inpt{
-  width: 90%;
+  width: 80%;
   height: 100%;
-  border-radius: 15px;
+  border-radius: 5px;
   border: none;
   box-shadow: 0px 0px 5px;
+  margin-left: 10px;
 }
 
-h4{
-  background-color: blue;
-  border: 1px solid;
-  width: 20%;
-  height: 100%;
-  margin: 10px;
-}
+
 
 .add-btn{
   background-color: rgb(60, 78, 218);
   color: white;
   padding: 5px;
-  border-radius: 2px;
-  margin-left: 4px;
+  border-radius: 5px;
+  width: 10%;
+  margin-left: 25px;
+  
   
 }
 
 
 .card{
-  background-color: #A459D1;
+  background-color: #be7ee4;
   padding: 10px;
   margin: 10px;
+  border-radius: 5px;
+  width: 90%;
+  
 }
+
+.card-box{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.card-area{
+  display: flex;
+  width: 100%;
+  
+}
+
+.Delete-btn{
+   margin: 10px;
+    width: 10%;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+}
+
+
 
 
