--- a/todolist/src/App.css
+++ b/todolist/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -44,7 +44,7 @@ h1{
   width: 100%;
   height: 30px;
   
-  /* margin: 10px; */
+  // margin: 10px; 
   padding-top: 10px;
   display: flex;
   flex-direction: row;
@@ -104,7 +104,7 @@ h1{
     background-color: black;
     color: white;
     border-radius: 10px;
-}
+} */
 
 
 
